--- a/lab4/send/Makefile
+++ b/lab4/send/Makefile
@@ -1,2 +1,2 @@
 all:
-	nvcc -lm main.cpp helpers.cpp transponse.cu -o lab4
+	nvcc -lm -O3 --compiler-options "-O3" main.cpp helpers.cpp transponse.cu -o lab4
