--- a/lab7/Makefile
+++ b/lab7/Makefile
@@ -34,4 +34,4 @@ $(TARGET): $(TARGET_BIN)
 
 .PHONY: $(TARGET_BIN)
 $(TARGET_BIN): | $(BUILDDIR) $(BINDIR)
-	$(MAKE) -C src BUILDDIR=$(BUILDDIR) BINDIR=$(BINDIR) TARGET_BIN=$(TARGET_BIN)
+	$(MAKE) -C src BINDIR=$(BINDIR) TARGET_BIN=$(TARGET_BIN)
