--- a/lab7/src/Makefile
+++ b/lab7/src/Makefile
@@ -23,13 +23,13 @@ CPP_SOURCES = main.cpp grid/grid.cpp dim3/dim3.cpp \
 HEADERS     = helpers.hpp grid/grid.hpp dim3/dim3.hpp \
 			problem.hpp solver.hpp exchange.hpp
 
-SOURCES = $(CPP_SOURCES) $(HEADERS)
+SOURCES = $(CPP_SOURCES)
 
 DEPS_LIST = $(foreach dep,$(SOURCES),$(DEPS_DIR)/$(subst /,__,$(shell realpath --relative-to $(CURDIR) $(dep))).mk)
 
-$(DEPS_LIST): $(DEPS_DIR)/%.mk: $(subst __,/,$@) | $(DEPS_DIR)
+$(DEPS_LIST): $(DEPS_DIR)/%.mk: | $(DEPS_DIR)
 	@echo $*
-	$(file > $@,$(patsubst %.cpp,$(BUILDDIR)/%.cpp.o,$*): $(shell $(CXX) -I. -E $(subst __,/,$*) | \
+	$(file > $@,$(patsubst %.cpp,$(BUILDDIR)/%.cpp.o,$*): $(shell $(CXX) $(IFLAGS) -E $(subst __,/,$*) | \
 		grep -Eo '#\s[0-9]+\s".*$$' - | \
 		sed -re 's|#\s[0-9]+\s"(.*?)".*$$|\1|gi' | \
 		grep -v -e "^/usr" -e "^<" | \
@@ -72,6 +72,6 @@ $(TARGET_BIN): $(TARGET_OBJECTS) | $(BINDIR)
 	@echo $@
 	$(MPICC) $(CFLAGS) $(IFLAGS) $(LDFLAGS) $^ -o $@
 
-$(CPP_OBJECTS): $(BUILDDIR)/%: $(patsubst %.cpp.o,%.cpp,$(subst __,/,$@)) | $(BUILDDIR)
+$(CPP_OBJECTS): $(BUILDDIR)/%: | $(BUILDDIR)
 	@echo $@
 	$(CXX) $(CFLAGS) $(IFLAGS) -c $(patsubst $(BUILDDIR)/%.cpp.o,%.cpp,$(subst __,/,$@)) -o $@
