--- a/lab8/Makefile
+++ b/lab8/Makefile
@@ -26,7 +26,7 @@ test: $(TARGET_BIN) | $(CONVERT_TOOL)
 .PHONY: send
 send: | $(SEND_DIR) $(SEND_TARGET_DIR)
 	mkdir -p $(SEND_TARGET_DIR)
-	$(MAKE) -C $(SRCDIR) copy DESTDIR=$(SEND_TARGET_DIR) TARGET=$(TARGET) CFLAGS= NVCCFLAGS=
+	$(MAKE) -C $(SRCDIR) copy DESTDIR=$(SEND_TARGET_DIR) TARGET=$(TARGET)
 	cd $(SEND_DIR) && tar cvf $(TARGET).tar $(TARGET)
 	gpg -r 703FD5D038947C5B57CCE5A64DF7496E16FD3CBC -ab $(SEND_DIR)/$(TARGET).tar
 
