--- a/lab8/src/Makefile
+++ b/lab8/src/Makefile
@@ -56,6 +56,7 @@ TARGET_OBJECTS = $$(CPP_OBJECTS) $$(CU_OBJECTS)
 LDFLAGS = -lm -lmpi
 IFLAGS = -I.
 NVCCFLAGS = -rdc=true
+GCCFLAGS = --std=c++11
 
 $(TARGET): $$(TARGET_OBJECTS)
 	$$(NVCC) -ccbin=$$(MPICXX) $$(NVCCFLAGS) $$(IFLAGS) $$(LDFLAGS) $$^ -o $$@
