--- a/KP/src/Makefile
+++ b/KP/src/Makefile
@@ -25,8 +25,8 @@ HEADERS = helpers.cuh helpers.hpp ssaa.hpp scene.hpp \
 		mat/mat3.hpp \
 		vec/vec3.hpp \
 
-CU_SOURCES  = mat/mat.cu vec/vec.cu ssaa.cu render/render.cu helpers.cu
-CPP_SOURCES = main.cpp scene.cpp render/render.cpp render/objects.cpp
+CU_SOURCES  = mat/mat.cu vec/vec.cu ssaa.cu render/render.cu helpers.cu ALL.cu
+# CPP_SOURCES = main.cpp scene.cpp render/render.cpp render/objects.cpp
 
 SOURCES = $(CU_SOURCES)
 
@@ -116,11 +116,12 @@ GCCFLAGS = $(CFLAGS) \
 		-Wctor-dtor-privacy -Wnon-virtual-dtor \
 		-Wunreachable-code -fstack-protector
 
-NVCCFLAGS ?= --std=c++14 \
+NVCCFLAGS ?= --std=c++14 -rdc=true \
 		-Werror cross-execution-space-call \
-		-arch=compute_35 -Wno-deprecated-gpu-targets \
+		-arch=sm_35 -Wno-deprecated-gpu-targets \
 		-D_FORCE_INLINES -Xcompiler -fPIC \
-		-Wno-deprecated-declarations
+		-Wno-deprecated-declarations \
+		--expt-relaxed-constexpr
 
 ifeq ($(BENCH),on)
 CFLAGS    = -O3 -DBENCHMARK -fopenmp
